5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1638_2724.log
== SUBMITION (2019-04-08 20:12:05) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n3<n1>n4):
	print(n1)
else:
	print(n)
-- EXECUTION TIME:
0.129074
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:12:12) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n3<n1>n4):
	print(n1)
else:
	print(n)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:20:38) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1>n2):
	print(n1)

if(n1<n>n2):
	print(n2)
	
if(n<n2>n1):
	print(n2)

	
-- EXECUTION TIME:
0.195291
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:20:38) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1>n2):
	print(n1)

if(n1<n>n2):
	print(n2)
	
if(n<n2>n1):
	print(n2)

	
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:21:17) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1>n2):
	print(n1)

if(n1<n>n2):
	print(n)
	
if(n<n2>n1):
	print(n2)

	
-- EXECUTION TIME:
0.169908
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:21:18) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1>n2):
	print(n1)

if(n1<n>n2):
	print(n)
	
if(n<n2>n1):
	print(n2)

	
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:21:27) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1>n2):
	print(n1)

if(n1<n>n2):
	print(n)
	

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:21:40) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
#n2 = int(input("Escreva um numero:"))#

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1>n2):
	print(n1)

if(n1<n>n2):
	print(n)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    n3 = min(n,n1,n2)
NameError: name 'n2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:21:50) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
#n2 = int(input("Escreva um numero:"))#

#n3 = min(n,n1,n2)#
#n4 = max(n,n1,n2)#

if(n<n1>n2):
	print(n1)

if(n1<n>n2):
	print(n)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(n<n1>n2):
NameError: name 'n2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:35:51) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1<n2):
	print(n)
else:
	if(n2<n<n2):
		
-- ERROR:
File "XXXX", line 13
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:36:05) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1<n2):
	print(n)
else:
	if(n2<n<n1):
		print(n2)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:36:45) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1<n2):
	print(n)
else:
	if(n2<n<n1):
		print(n2)
		else:
			if(n1<n2<n):
				print(n1)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:37:18) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = min(n,n1,n2)
n4 = max(n,n1,n2)

if(n<n1<n2):
	print(n)
else:
	if(n2<n<n1):
		print(n2)
else:
	if(n1<n2<n):
		print(n1)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:12:01) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = max(n,n1,n2)
n4 = min(n,n1,n2)

x = n+n1+n2  - (n3+n4) 

print(x)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:12:08) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = max(n,n1,n2)
n4 = min(n,n1,n2)

x = n+n1+n2  - (n3+n4) 

print(x)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:12:13) 
-- CODE:
n = int(input("Escreva um numero:"))
n1 = int(input("Escreva um numero:"))
n2 = int(input("Escreva um numero:"))

n3 = max(n,n1,n2)
n4 = min(n,n1,n2)

x = n+n1+n2  - (n3+n4) 

print(x)
-- EXECUTION TIME:
0.159808
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
